--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,40 @@
     font-weight: bold;
 }
 
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+}
+
+.msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 1px #000;
+    text-align: center;
+}
+
+.msg.error {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7;
+}
+
+.msg.success {
+    color: #0f5123;
+    background-color: #d1e7dd;
+    border-color: #badbcc;
+}
+
+/* HOME */
+
+#main-container {
+    background-color: #000;
+    color: #fff;
+    min-height: 65vh;
+    padding: 40px;
+}
+
 /* FOOTER */
 
 #footer {
@@ -87,7 +121,7 @@
     line-height: 3;
 }
 
-#social-container li:hover {
+#social-container li:hoveR {
     background-color: #333;
 }
 
