Frontend: Criando arquivos de autenticação

--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,7 @@
 
 .card-btn {
     color: #000;
+    margin-top: 10px;
     background-color: #f5c518;
     border: 2px solid #f5c518;
     width: 100%;
